
2003-11-04 cjg
 
 - Made "hideemail" field true by default (in Users)
 - Allowed "refereed" to be NULL without warning in OAI/DC code
 - Cleaned up output of "indexer" when it already appears to be running.
    now it gives sensible advice about running "ps" to check etc.
 - Changed eprints staff search to work in the same (new) way as other
    searches. Allowed "dataset_id" to be a parameter so that it can be
    config'd by admin. 
 - Config.pm now generates 4 staff searches if they are not already configured;
    "inbox","buffer",etc.
 - ordervalues are now created and updated each time a record is creaded or 
    changed (don't need to be deleted, really, indexer does that)
 - renamed phraseid's in Extra.pm to logical names.
 - Added a "Go!" button to subject search.
 - Searches, User Forms and Submission Forms now render problems in a CSS'd
    DIV so that they are clearly highlighted.
 - [c] Added problem_box entry to .css file.
 - Problem with UTF-8 *objects* as attributes in some of the DOM code. Forced
    them to strings.
 - Subscriptions now say who they are mailing to (in debug mode), not just
    that they are trying to send subscription #11

2003-11-05 cjg

 - Made FULLTEXT search use a constant for clarity.
 - 404, 401 pages and the PerlVar now only happen in the correct sub-dir
 - latsest tool now does RSS output, kinda
 - get_value is now a property of MetaField which always just calls 
    get_value_raw on the object, except for the fulltext object.
 - Added a fulltext field type which just gets the full texts from a 
    file. Feels like a multiple-longtext.
 - Added "delete_ordervalues". Stray ordervalues were lying around after
    items were moved out of the current buffer. Caused error (INSERT) when
    they came back later.
 - Renamed "freetext" search to "index" and commented out name_match for
    now.

======================================================================